# chatbot

./: Cargo.toml  LICENSE  chatbot_configuration.js
src/: intent.rs  lib.rs  main.rs  response_nlu.yaml  response_regex.yaml  search_regex.rs  structs.rs
src/components/: chatbot_input.rs  message.rs  mod.rs
