[package]
name = "chatbot"
version = "0.1.0"
authors = ["Julien <jgabryelewicz@adexos.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = { version = "0.15", package = "yew-stdweb" }
