[package]
name = "chatbot"
version = "0.1.0"
authors = ["Julien <julien.gabryelewicz2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = { version = "0.16", package = "yew-stdweb" }
wasm-bindgen = "0.2"
